--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -37,7 +37,7 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/me, roles: ROLE_USER }
         # LATER path authorizations/ access control
 
     # role_hierarchy:
