--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -4,3 +4,7 @@
 
 logout:
     path: /logout
+
+# app/config/routing.yml
+_liip_imagine:
+    resource: "@LiipImagineBundle/Resources/config/routing.yaml"
