--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,6 +6,7 @@
 parameters:
     #  STEP UPLOAD .yaml
     pictures_directory: '%kernel.project_dir%/public/uploads/pictures'
+    avatars_directory: '%kernel.project_dir%/public/uploads/avatars'
 
 services:
     # default configuration for services in *this* file
