--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -42,4 +42,4 @@ security:
 
     # role_hierarchy:
     #     ROLE_ADMIN: ROLE_USER
-    # LATER role hierarchy , vérif si c'est utile        
+    # LATER role hierarchy 
