--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -24,7 +24,13 @@ security:
             logout:
                 path: security_logout
                 # where to redirect after logout
-                target: home
+                target: home            
+            
+            # TODO LIMIT login attempts 
+            # see https://symfony.com/doc/current/security.html#limiting-login-attempts
+            login_throttling:
+                max_attempts: 3
+                interval: '15 minutes'
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
@@ -32,8 +38,7 @@ security:
             # https://symfony.com/doc/current/security/impersonating_user.html
             # switch_user: true
 
-            # TODO LIMIT login attempts 
-            # see https://symfony.com/doc/current/security.html#limiting-login-attempts
+
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
